[gd_scene load_steps=8 format=3 uid="uid://b5ui348xrja2j"]

[ext_resource type="Script" path="res://Scripts/Buttons/BackScript.gd" id="1_fll2r"]
[ext_resource type="Script" path="res://Scripts/credits.gd" id="1_jgnww"]
[ext_resource type="Script" path="res://Scripts/Buttons/GamepadUI.gd" id="2_m0gci"]
[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_yqpi3"]
[ext_resource type="Script" path="res://Scripts/floating_ui.gd" id="3_xtxaf"]

[sub_resource type="LabelSettings" id="LabelSettings_56lap"]
font = ExtResource("2_yqpi3")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_dvsln"]
font = ExtResource("2_yqpi3")
font_size = 32

[node name="Credits" type="Node2D"]
script = ExtResource("1_jgnww")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Credits" type="Control" parent="." node_paths=PackedStringArray("FirstControl")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.895, 1.895)
script = ExtResource("2_m0gci")
FirstControl = NodePath("Back")

[node name="Title" type="Label" parent="Credits"]
layout_mode = 2
offset_left = -245.0
offset_top = -305.0
offset_right = 276.0
offset_bottom = -217.0
text = "CREDITS"
label_settings = SubResource("LabelSettings_56lap")
horizontal_alignment = 1
script = ExtResource("3_xtxaf")

[node name="Back" type="Button" parent="Credits"]
layout_mode = 0
offset_left = -636.412
offset_top = -350.396
offset_right = -519.412
offset_bottom = -292.396
pivot_offset = Vector2(56.9925, 30.0794)
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 24
text = "BACK"
script = ExtResource("1_fll2r")
scroll_direction = Vector2(-1, 0)
vertical_intensity = 15.0
horizontal_intensity = 10

[node name="Sounds" type="VBoxContainer" parent="Credits"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
offset_left = -531.926
offset_top = 86.0158
offset_right = 98.0739
offset_bottom = 565.016
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 20
script = ExtResource("3_xtxaf")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="SubTitle" type="Label" parent="Credits/Sounds"]
layout_mode = 2
text = "SOUND
"
label_settings = SubResource("LabelSettings_dvsln")
horizontal_alignment = 1

[node name="Names" type="VBoxContainer" parent="Credits/Sounds"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CenterContainer5" type="CenterContainer" parent="Credits/Sounds/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Sounds/Names/CenterContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Interface sounds - Kenney"

[node name="CenterContainer6" type="CenterContainer" parent="Credits/Sounds/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Sounds/Names/CenterContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Impact sounds - Kenney"

[node name="CenterContainer7" type="CenterContainer" parent="Credits/Sounds/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Sounds/Names/CenterContainer7"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Rubbing Wooden sticks - NoisyRedFox"

[node name="CenterContainer8" type="CenterContainer" parent="Credits/Sounds/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Sounds/Names/CenterContainer8"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "2 Tallando madera - Checholio"

[node name="Music" type="VBoxContainer" parent="Credits"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
offset_left = 58.0475
offset_top = -161.478
offset_right = 688.047
offset_bottom = -41.4778
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 20
script = ExtResource("3_xtxaf")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="SubTitle" type="Label" parent="Credits/Music"]
layout_mode = 2
text = "MUSIC"
label_settings = SubResource("LabelSettings_dvsln")
horizontal_alignment = 1

[node name="Names" type="VBoxContainer" parent="Credits/Music"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CenterContainer4" type="CenterContainer" parent="Credits/Music/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Music/Names/CenterContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Cozy - One man symphony"

[node name="Game" type="VBoxContainer" parent="Credits"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
offset_left = -541.953
offset_top = -157.256
offset_right = 88.0474
offset_bottom = -21.2559
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 20
script = ExtResource("3_xtxaf")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="SubTitle2" type="Label" parent="Credits/Game"]
layout_mode = 2
text = "GAME_BY"
label_settings = SubResource("LabelSettings_dvsln")
horizontal_alignment = 1

[node name="Names2" type="VBoxContainer" parent="Credits/Game"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CenterContainer" type="CenterContainer" parent="Credits/Game/Names2"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Game/Names2/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Adam Maps"

[node name="CenterContainer2" type="CenterContainer" parent="Credits/Game/Names2"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Game/Names2/CenterContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Philippe St-Laurent-Recoura"

[node name="CenterContainer3" type="CenterContainer" parent="Credits/Game/Names2"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Game/Names2/CenterContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Zachary Meunier"

[node name="CenterContainer4" type="CenterContainer" parent="Credits/Game/Names2"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Game/Names2/CenterContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Chase Clayton"

[node name="Assets" type="VBoxContainer" parent="Credits"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
offset_left = 78.1003
offset_top = 57.5198
offset_right = 672.1
offset_bottom = 536.52
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 20
script = ExtResource("3_xtxaf")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="SubTitle" type="Label" parent="Credits/Assets"]
layout_mode = 2
text = "VISUAL"
label_settings = SubResource("LabelSettings_dvsln")
horizontal_alignment = 1

[node name="Names" type="VBoxContainer" parent="Credits/Assets"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CenterContainer4" type="CenterContainer" parent="Credits/Assets/Names"]
visible = false
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Assets/Names/CenterContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Wooden pixel art GUI - Narik"

[node name="CenterContainer5" type="CenterContainer" parent="Credits/Assets/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Assets/Names/CenterContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Xeno Grunt - Pixramen "

[node name="CenterContainer6" type="CenterContainer" parent="Credits/Assets/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Assets/Names/CenterContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Sci-fi lab - Foozle"

[node name="CenterContainer7" type="CenterContainer" parent="Credits/Assets/Names"]
visible = false
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Assets/Names/CenterContainer7"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Pirate bomb - Pixel frog"

[node name="CenterContainer8" type="CenterContainer" parent="Credits/Assets/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Assets/Names/CenterContainer8"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Kings and pigs - Pixel frog"

[node name="CenterContainer9" type="CenterContainer" parent="Credits/Assets/Names"]
layout_mode = 2

[node name="LinkButton" type="Label" parent="Credits/Assets/Names/CenterContainer9"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yqpi3")
theme_override_font_sizes/font_size = 18
text = "Miner Theme - SpaceCadetAstrodite"

[connection signal="mouse_entered" from="Credits/Back" to="Credits/Back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Credits/Back" to="Credits/Back" method="_on_mouse_exited"]
[connection signal="pressed" from="Credits/Back" to="Credits/Back" method="_on_pressed"]
